tests/ui/pattern/usefulness/slice-pattern-const-3.stderr
error: unreachable pattern
  --> $DIR/slice-pattern-const-3.rs:9:9
   |
LL |         MAGIC_TEST => (),
   |         ---------- matches all the relevant values
LL |         ["0x00", "0x00", "0x00", "0x00"] => (),
LL |         ["4", "5", "6", "7"] => (),
   |         ^^^^^^^^^^^^^^^^^^^^ no value can reach this
   |
note: the lint level is defined here
  --> $DIR/slice-pattern-const-3.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/slice-pattern-const-3.rs:15:9
   |
LL |         MAGIC_TEST => (),
   |         ---------- matches all the relevant values
LL |         ["4", "5", "6", "7"] => (),
   |         ^^^^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/slice-pattern-const-3.rs:21:9
   |
LL |         ["4", "5", "6", "7"] => (),
   |         -------------------- matches all the relevant values
LL |         MAGIC_TEST => (),
   |         ^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/slice-pattern-const-3.rs:28:9
   |
LL |         ["boo"] => (),
   |         ------- matches all the relevant values
LL |         FOO => (),
   |         ^^^ no value can reach this

error: aborting due to 4 previous errors

